Bug 94354 - R9285 Unigine Valley perf regression since radeonsi: use re-Z
Summary: R9285 Unigine Valley perf regression since radeonsi: use re-Z
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-01 17:35 UTC by Andy Furniss
Modified: 2016-10-16 12:55 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Andy Furniss 2016-03-01 17:35:00 UTC
Haven't tested other apps/settings, but on R9285 Unigine Valley on highest settings, 8x AA, 1920x1080 fullscreen is slower after 

d0f3b524cdb8489a6872ba3639a13813de221fc2

radeonsi: use re-Z
This can increase perf for shaders that kill pixels (kill, alpha-test,
alpha-to-coverage).

Before

FPS: 27.2
Score: 1139
Min FPS: 13.5
Max FPS: 52.0

After 

FPS: 22.6
Score: 946
Min FPS: 11.7
Max FPS: 47.1
Comment 3 Marek Olšák 2016-10-14 16:55:10 UTC
Thanks and sorry for missing this bug.
Comment 4 Andy Furniss 2016-10-16 12:55:18 UTC
NP, I should have bumped it long ago.

I was suprised no one else noticed - I guess phoronix tests use lower settings or something.

Thanks for all your and others work on perf.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.